2009-09-05  John W. Eaton  <jwe@octave.org>

	* genprops.awk: Fix formatting of generated output.
	* graphics.h.in (graphics_object::get (const std::string&) const,
	graphics_object::get (const char *) const): New functions.

2009-09-05  John W. Eaton  <jwe@octave.org>

	* txt-eng-ft.cc (ft_manager::do_get_font): Remove spurious
	assignment usd for debugging.

2009-09-04  John W. Eaton  <jwe@octave.org>

	* txt-eng-ft.cc (ft_manager::do_get_font, ft_render::set_font,
	ft_render::set_mode, ft_render::visit, ft_render::set_color):
	Issue warnings instead of errors for non-fatal problems.
	(ft_render::visit): If face is null, then return without warning.
	* genprops.awk: Also generate const std::string& and const char*
	versions of the get member functions.
	* gl-render.cc (opengl_renderer::draw): Omit caseless_str
	constructor in call to get method.
	* ft_render::set_font (): Likewise.

2009-09-03  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_format (const Complex&, int&, int&)):
	Avoid passing NaN or Inf to log10.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::assign (assign_op, const octave_value&)):
	Call maybe_mutate after in-place operation.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::do_non_const_unary_op): Split to
	genuine/non-genuine case.
	(octave_value::binary_op_to_assign_op): New method.
	* ov.h: Declare it.
	* ov-re-mat.h (octave_matrix::changesign): New method.
	* ov-flt-re-mat.h (octave_float_matrix::changesign): New method.
	* ov-cx-mat.h (octave_complex_matrix::changesign): New method.
	* ov-flt-cx-mat.h (octave_float_complex_matrix::changesign): New
	method.
	* ov-intx.h (OCTAVE_VALUE_INT_MATRIX_T::changesign): New method.
	* ov-bool-mat.h (octave_bool_matrix::invert): New method.
	* pt-unop.cc (tree_prefix_expression::rvalue1): Use
	do_non_const_unary_op.
	* pt-binop.cc (tree_binary_expression::rvalue1): If possible,
	convert to computed assignment.
